package backend.model;

import javafx.scene.canvas.GraphicsContext;

public interface Drawable {

    //Draws an element (figure) on a GraphicsContext
    void draw(GraphicsContext graphicsContext);

}
