package backend.model;

public interface Movable {

    //moves the figure a deltaX amount on its x axis and a deltaY amount on its Y axis
    void move(double deltaX, double deltaY);

}
